tox action - trying to call proper pyenv

--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -21,4 +21,4 @@ jobs:
         pip install tox
     - name: Running tox commands
       run: |
-        tox -e ${{ matrix.python-version }}
+        tox -e py${{ matrix.python-version }}
