--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10"]
+        python-env: ["py310"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -21,4 +22,4 @@ jobs:
         pip install tox
     - name: Running tox commands
       run: |
-        tox -e py${{ matrix.python-version | replace(".", "") }}
+        tox -e py${{ matrix.python-env }}
