--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.8"]
         python-env: ["py310"]
     steps:
     - uses: actions/checkout@v2
@@ -22,4 +22,4 @@ jobs:
         pip install tox
     - name: Running tox commands
       run: |
-        tox -e py${{ matrix.python-env }}
+        tox -e ${{ matrix.python-env }}
