accept pylint warnings

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,8 @@ commands =
     poetry install -v
     black src
     black --check --diff src
-    pylint src
-    pylint --disable=missing-class-docstring,missing-function-docstring,redefined-outer-name  tests
+    pylint --exit-zero src
+    pylint --exit-zero  --disable=missing-class-docstring,missing-function-docstring,redefined-outer-name  tests
     mypy --strict src
     poetry run pytest --cov=quantfinpy tests
     sphinx-build -W -b html docs/source docs/build
