Address testing issues and add poetry lock file

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,6 @@ envlist = py36,py37,py38,py39,py310
 [testenv]
 whitelist_externals = poetry
 commands =
-    poetry lock
     poetry install -v
     black src
     black --check --diff src
@@ -14,7 +13,7 @@ commands =
     pylint --exit-zero  --disable=missing-class-docstring,missing-function-docstring,redefined-outer-name  tests
     mypy --strict src
     poetry run pytest --cov=quantfinpy tests
-    sphinx-build -W -b html docs/source docs/build
+    sphinx-build -W -b html doc/source doc/build
 
 [pytest]
 python_files = test_*.py
