Adding forward and spot product definition with example for fx fwd

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ commands =
     black src
     black --check --diff src
     pylint --exit-zero src
-    pylint --exit-zero  --disable=missing-class-docstring,missing-function-docstring,redefined-outer-name  tests
+    pylint --exit-zero  --disable=missing-class-docstring,missing-function-docstring,redefined-outer-name,duplicate-code  tests
     mypy --strict src
     poetry run pytest --cov=quantfinpy tests
     sphinx-build -W -b html doc/source doc/build
