Add order classes

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skipsdist = true
 isolated_build = True
-envlist = py36,py37,py38,py39,py310
+envlist = py37,py38,py39,py310
 
 [testenv]
 whitelist_externals = poetry
@@ -9,8 +9,8 @@ commands =
     poetry install -v
     black src
     black --check --diff src
-    pylint --exit-zero src
-    pylint --exit-zero  --disable=missing-class-docstring,missing-function-docstring,redefined-outer-name,duplicate-code  tests
+    pylint --exit-zero --rcfile=tox.ini src
+    pylint --exit-zero --rcfile=tox.ini --disable=missing-class-docstring,missing-function-docstring,redefined-outer-name,duplicate-code  tests
     mypy --strict src
     poetry run pytest --cov=quantfinpy tests
     sphinx-build -W -b html doc/source doc/build
@@ -21,3 +21,6 @@ norecursedirs = .tox
 
 [coverage:run]
 omit = tests/*
+
+[FORMAT]
+max-line-length=120
