Adding pandas (with stubs)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Quantitative finance in python."
 authors = ["TradingPy"]
 
 [tool.poetry.dependencies]
-python = "^3.6.2"
+python = "^3.8"
+pandas = "^1.4.1"
+pandas-stubs = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
