--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skipsdist = true
 isolated_build = True
-envlist = py37,py38,py39,py310
+envlist = py38,py39,py310
 
 [testenv]
 whitelist_externals = poetry
