Adding isort to tox action

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,8 @@ commands =
     poetry install -v
     black src
     black --check --diff src
+    isort src tests
+    isort src tests --diff
     pylint --exit-zero --rcfile=tox.ini src
     pylint --exit-zero --rcfile=tox.ini --disable=missing-class-docstring,missing-function-docstring,redefined-outer-name,duplicate-code  tests
     mypy --strict src
@@ -24,3 +26,6 @@ omit = tests/*
 
 [FORMAT]
 max-line-length=120
+
+[isort]
+profile = black
