--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = ["TradingPy"]
 python = "^3.8"
 pandas = "^1.4.1"
 pandas-stubs = "^1.2.0"
-typing-extensions = "^4.1.1" # for pythonn versions prior to 3.10
+typing-extensions = "^4.1.1" # for python versions prior to 3.10
+cytoolz = "^0.11.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
