Adding pydocstyle checks

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,8 @@ commands =
     pylint --exit-zero --rcfile=tox.ini --disable=missing-class-docstring,missing-function-docstring,redefined-outer-name,duplicate-code  tests
     mypy --strict src
     poetry run pytest --cov=quantfinpy tests
-    sphinx-build -W -b html doc/source doc/build
+    pydocstyle src
+    sphinx-build -W -b html docs/source docs/build
 
 [pytest]
 python_files = test_*.py
@@ -29,3 +30,6 @@ max-line-length=120
 
 [isort]
 profile = black
+
+[pydocstyle]
+ignore = D105, D203, D212, D205, D107, D200, D407
