--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ sphinx = "^4.3.2"
 sphinx_rtd_theme = "^1.0.0"
 mypy = "^0.931"
 pylint = "^2.12.2"
+pydocstyle = "^6.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.7"]
