--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,4 +5,6 @@ python:
   version: "3.8"
   install:
     - method: pip
-      path: . sphinx sphinx-autopackagesummary
+      path: .
+      extra_requirements:
+        - docs
