--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install poetry
     - name: Publishing package
+      env:
+        PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
       run: |
         poetry install -v
         poetry build
-        poetry publish --username ${{ secrets.PYPI_USERNAME }} --password ${{ secrets.PYPI_TOKEN }}
+        poetry publish --username $PYPI_USERNAME --password $PYPI_TOKEN
