--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,4 +22,4 @@ jobs:
       run: |
         poetry install -v
         poetry build
-        poetry publish --username $PYPI_USERNAME --password $PYPI_TOKEN
+        poetry publish -p $PYPI_TOKEN -u $PYPI_USERNAME
