Removing tenor class - Test coverage report in html format - Testing - Extra options

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ commands =
     pylint --exit-zero --rcfile=tox.ini src
     pylint --exit-zero --rcfile=tox.ini --disable=missing-class-docstring,missing-function-docstring,redefined-outer-name,duplicate-code  tests
     mypy --strict src
-    poetry run pytest --cov=quantfinpy tests
+    poetry run pytest --cov=quantfinpy --cov-report=html tests
     pydocstyle src
     sphinx-build -W -b html docs/source docs/build
 
