Add back terminal pytest cov report and ignoring extra pydocstyle warnings

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ commands =
     pylint --exit-zero --rcfile=tox.ini src
     pylint --exit-zero --rcfile=tox.ini --disable=missing-class-docstring,missing-function-docstring,redefined-outer-name,duplicate-code  tests
     mypy --strict src
-    poetry run pytest --cov=quantfinpy --cov-report=html tests
+    poetry run pytest --cov=quantfinpy --cov-report=html --cov-report term tests
     pydocstyle src
     sphinx-build -W -b html docs/source docs/build
 
@@ -32,4 +32,4 @@ max-line-length=120
 profile = black
 
 [pydocstyle]
-ignore = D105, D203, D212, D205, D107, D200, D407
+ignore = D105, D203, D212, D205, D107, D200, D407, D400, D415
