--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ sphinx_rtd_theme = "^1.0.0"
 mypy = "^0.931"
 pylint = "^2.12.2"
 pydocstyle = "^6.1.1"
+notebook = "^6.4.8"
 
 [build-system]
 requires = ["poetry-core>=1.0.7"]
