--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^1.4.1"
 pandas-stubs = "^1.2.0"
 typing-extensions = "^4.1.1" # for python versions prior to 3.10
 cytoolz = "^0.11.2"
+multimethod = "^1.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
