--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ multimethod = "^1.7"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
-black  = "^21.12b0"
+black  = "^22.3.0"
 sphinx = "^4.3.2"
 sphinx_rtd_theme = "^1.0.0"
 mypy = "^0.931"
