Update attrs usage + improve tox setup + replace lint with ruff + python 3.11 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,60 @@
 [tox]
-skipsdist = true
-isolated_build = True
-envlist = py{38,39,310}
+isolated_build = true
+envlist = format, lint, mypy, doc, py{38,39,310, 311}
 
 [testenv]
-whitelist_externals = poetry
-commands =
+description = run tests
+allowlist_externals = poetry
+deps =
+    pytest
+    pytest-cov
+commands_pre =
     poetry install -v
+commands =
+    poetry run pytest --cov=quantfinpy --cov-report=html --cov-report term tests
+
+[testenv:format]
+description = run black and isort
+deps =
+    black
+    isort
+commands =
     black src tests
     black --check --diff src
     isort src tests
     isort src tests --diff --check
-    pylint --exit-zero --rcfile=tox.ini src
-    pylint --exit-zero --rcfile=tox.ini --disable=missing-class-docstring,missing-function-docstring,redefined-outer-name,duplicate-code  tests
+
+[testenv:lint]
+description = run linter
+allowlist_externals = poetry
+deps =
+    ruff
+    pytest
+commands_pre =
+    poetry install -v
+commands =
+    ruff src
+    ruff  tests
+
+[testenv:mypy]
+description = run mypy
+deps =
+    mypy
+    pandas-stubs
+commands_pre =
+    poetry install -v
+commands =
     mypy --strict src
-    poetry run pytest --cov=quantfinpy --cov-report=html --cov-report term tests
-    pydocstyle src
+
+[testenv:doc]
+description = run doc tests and doc generation
+allowlist_externals = poetry
+deps =
+    sphinx
+    sphinx_rtd_theme
+commands_pre =
+    poetry install -v
+commands =
     sphinx-build -W -b html docs/source docs/build
 
 [pytest]
