--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,22 +8,12 @@ authors = ["TradingPy"]
 python = "^3.8"
 attrs = "^21.4.0"
 pandas = "^1.4.1"
-pandas-stubs = "^1.2.0"
 typing-extensions = "^4.1.1" # for python versions prior to 3.10
-cytoolz = "^0.11.2"
 multimethod = "^1.7"
-
-[tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
-pytest-cov = "^3.0.0"
-black  = "^22.3.0"
-sphinx = "^4.3.2"
-sphinx_rtd_theme = "^1.0.0"
-mypy = "^0.931"
-pylint = "^2.12.2"
-pydocstyle = "^6.1.1"
-notebook = "^6.4.12"
 
 [build-system]
 requires = ["poetry-core>=1.0.7"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 120
