run all tox actions on github

--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -22,4 +22,4 @@ jobs:
         pip install tox
     - name: Running tox commands
       run: |
-        tox -e ${{ matrix.python-env }}
+        tox
