Use doctests for testing order classes.

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ allowlist_externals = poetry
 deps =
     pytest
     pytest-cov
+    pytest-doctestplus
 commands_pre =
     poetry install -v
 commands =
